<resources>
    <string name="app_name">Bluehound</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="image_of_the_device">Image of the device</string>
    <string name="device_name">Device name</string>
    <string name="date">Date</string>
    <string name="add_new_device">Add new device</string>
    <string name="take_gps_position">Take gps position</string>
    <string name="description">Description</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_captured">Image captured</string>
    <string name="share">Share</string>
    <string name="username">Username</string>
    <string name="device_id">Device ID:</string>
    <string name="status">Device status:</string>
    <string name="currentlocation">Last location</string>
    <string name="delete_device">Delete devices</string>
    <string name="track">track</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="visible">Visible</string>
    <string name="refresh">Refresh</string>
    <string name="disable">Disable BLT</string>
</resources>