<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item  android:id="@+id/menu_delete"
        android:title="@string/delete_device"
        android:icon="@drawable/ic_baseline_delete_24"
        android:iconTint="@color/white"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/search" />

    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never"
        android:contentDescription="@string/settings"/>
    <item
        android:id="@+id/enableBluetooth"
        android:icon="@drawable/ic_baseline_bluetooth_connected_24"
        android:title="@string/enable"
        app:showAsAction="never"
        android:contentDescription="@string/settings"/>
    
    <item
        android:id="@+id/visibleBluetooth"
        android:icon="@drawable/ic_baseline_bluetooth_searching_24"
        android:title="@string/visible"
        app:showAsAction="never"
        android:contentDescription="@string/settings"/>
    <item
        android:id="@+id/scanBluetooth"
        android:icon="@drawable/ic_baseline_bluetooth_searching_24"
        android:title="@string/visible"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/settings"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="never"
        android:contentDescription="@string/refresh"/>
</menu>